--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ bundler_args: --without production development
 
 before_script:
   - export RAILS_ENV=test
-  - bundle exec rake db:schema:load
+  - bundle exec rails db:schema:load RAILS_ENV=test
 
 script: bundle exec rspec
 
