--- a/config/cable.yml
+++ b/config/cable.yml
@@ -3,5 +3,5 @@ production: &production
   url: redis://localhost:6379
 development: &development
   adapter: redis
-  url: redis://localhost:6379
+  url: redis://192.168.99.100:6379
 test: *development
