--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+GITHUB_URL=https://github.com # use your own in case of using GHE 
 GITHUB_CLIENT_ID=YOUR-GITHUB-CLIENT-ID
 GITHUB_SECRET=YOUR-GITHUB-APP-SECRET
 ACCESS_TOKEN=YOUR-GITHUB-ACCESS-TOKEN
