--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,7 +1,11 @@
-production: &production
+development:
   adapter: redis
-  url: redis://localhost:6379
-development: &development
+  url: redis://localhost:6379/1
+
+test:
+  adapter: async
+
+production:
   adapter: redis
-  url: redis://localhost:6379
-test: *development
+  url: redis://localhost:6379/1
+  channel_prefix: perkinsci_production
